test : TestCase For PlaceRepository