@@ -1,7 +1,9 @@
 package com.golfzonaca.backoffice.web.transformtype;
 
 import com.golfzonaca.backoffice.domain.Place;
-import com.golfzonaca.backoffice.web.transformtype.form.PlaceViewForm;
+import com.golfzonaca.backoffice.web.transformtype.form.PlaceAddForm;
+import com.golfzonaca.backoffice.repository.dto.PlaceUpdateDto;
+import com.golfzonaca.backoffice.web.transformtype.form.PlaceEditForm;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
@@ -11,28 +13,40 @@ import java.util.List;
 @Service
 public class TransformType {
 
-    public Place listToString(PlaceViewForm placeViewForm) {
+    public Place listToString(PlaceAddForm placeAddForm) {
         Place place = new Place();
-        place.setPlaceName(placeViewForm.getPlaceName());
-        place.setPlaceDescription(placeViewForm.getPlaceDescription());
-        place.setPlaceOpenDays(placeViewForm.getPlaceOpenDays().toString().replace("[", "").replace("]",""));
-        place.setPlaceStart(placeViewForm.getPlaceStart());
-        place.setPlaceEnd(placeViewForm.getPlaceEnd());
-        place.setPlaceAddInfo(placeViewForm.getPlaceAddInfo().toString().replace("[","").replace("]",""));
+        place.setPlaceName(placeAddForm.getPlaceName());
+        place.setPlaceDescription(placeAddForm.getPlaceDescription());
+        place.setPlaceOpenDays(placeAddForm.getPlaceOpenDays().toString().replace("[", "").replace("]",""));
+        place.setPlaceStart(placeAddForm.getPlaceStart());
+        place.setPlaceEnd(placeAddForm.getPlaceEnd());
+        place.setPlaceAddInfo(placeAddForm.getPlaceAddInfo().toString().replace("[","").replace("]",""));
 //        place.setAddressId(place.getAddressId());
         return place;
     }
 
-    public PlaceViewForm stringToList(Place place) {
-        PlaceViewForm placeViewForm = new PlaceViewForm();
-        placeViewForm.setId(place.getId());
-        placeViewForm.setPlaceName(place.getPlaceName());
-        placeViewForm.setPlaceDescription(place.getPlaceDescription());
+    public PlaceAddForm stringToList(Place place) {
+        PlaceAddForm placeAddForm = new PlaceAddForm();
+        placeAddForm.setId(place.getId());
+        placeAddForm.setPlaceName(place.getPlaceName());
+        placeAddForm.setPlaceDescription(place.getPlaceDescription());
         // daysString 배열을 daysList 로 변환하기
-        placeViewForm.setPlaceOpenDays(new ArrayList<>(Arrays.asList(place.getPlaceOpenDays().split(", "))));
-        placeViewForm.setPlaceStart(place.getPlaceStart());
-        placeViewForm.setPlaceEnd(place.getPlaceEnd());
-        placeViewForm.setPlaceAddInfo(List.of(place.getPlaceAddInfo().split(", ")));
-        return placeViewForm;
+        placeAddForm.setPlaceOpenDays(new ArrayList<>(Arrays.asList(place.getPlaceOpenDays().split(", "))));
+        placeAddForm.setPlaceStart(place.getPlaceStart());
+        placeAddForm.setPlaceEnd(place.getPlaceEnd());
+        placeAddForm.setPlaceAddInfo(List.of(place.getPlaceAddInfo().split(", ")));
+        return placeAddForm;
+    }
+
+    public PlaceUpdateDto editTransform(PlaceEditForm placeEditForm) {
+        PlaceUpdateDto place = new PlaceUpdateDto();
+        place.setPlaceName(placeEditForm.getPlaceName());
+        place.setPlaceDescription(placeEditForm.getPlaceDescription());
+        place.setPlaceOpenDays(placeEditForm.getPlaceOpenDays().toString().replace("[", "").replace("]",""));
+//        place.setPlaceStart(placeEditForm.getPlaceStart());
+//        place.setPlaceEnd(placeEditForm.getPlaceEnd());
+//        place.setPlaceAddInfo(placeEditForm.getPlaceAddInfo().toString().replace("[","").replace("]",""));
+//        place.setAddressId(place.getAddressId());
+        return place;
     }
 }
